--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,8 @@ language: php
 php:
   - 5.5
   - 5.4
+  
+before_script:
+  - wget http://getcomposer.org/composer.phar
+  - php composer.phar install
+  - phpunit
